# GraphQLServer

./: .env  Cargo.toml  README.md  sqlx-data.json
migrations/: 20230404121046_init_user.down.sql  20230404121046_init_user.up.sql
src/: errors.rs  main.rs
src/api/: graphql_schema.rs  handlers.rs  mod.rs
src/app/: database.rs  mod.rs
src/schemas/: mod.rs  state.rs  user.rs
