[package]
name = "step_3"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
actix-web = "4.3.1"
actix-session={version="0.7.2", features=["cookie-session"]}
dotenv = "0.15.0"

futures="0.3.26"
juniper = {git ="https://github.com/graphql-rust/juniper.git",features=["time"]}

serde = {verison="1.0.152", features=["derive"]}
serde_json="*"

sqlx = { version = "0.6.2", features = ["postgres", "runtime-actix-native-tls","uuid","time","offline"] }

time = {version="0.3.20", features=['serde','serde-well-known','std']}
validator={version="0.16",features=["derive"]}

uuid = {version="1.3.0",features=["v4","fast-rng","macro-diagnostics"]}
argon2="0.5"


log = "0.4.17"
env_logger = "0.10.0"

[dev-dependencies]
awc="3.1.1"
tokio="*"